css/checkout.css
@import url(https://fonts.googleapis.com/css?family=Roboto);
/*My hum... body.. yeah.. */
body {
  background-color: #444444;
  font-family: "Roboto", sans-serif;
  overflow: hidden;
}

.page-title{
  position: absolute;
  color: white;
  top: 55px;
  left: 15%;
  font-size: 40px;
  font-weight: 400;
  text-shadow: 0px 10px 5px rgba(0, 0, 0, 0.507),
                 10px 20px 5px rgba(0,0,0,0.05),
                 -10px 20px 5px rgba(0,0,0,0.05);
}

/* The card */
.card {
  position: relative;
  height: 500px;
  width: 1000px;
  top: -30px;
  margin: 200px auto;
  background-color: #FFF;
  border: none;
  border-radius:3px;
  box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);

  overflow:hidden;
}

/* Image on the left side */
.thumbnail .left{
  float: left;
  position: absolute;
  left: 220px;
  top: 220px;
  height: 400px;
  width: 500px;
  object-fit: cover;
  border-radius: 3px;
  box-shadow: 10px 10px 70px 0px rgba(90, 90, 90, 0.75);
  /* overflow: hidden; */
}

img.left {
  position: absolute;
  left: 50%;
  top: 50%;
  height: auto;
  width: 100%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* Right side of the card */
.right {
  margin-left: 510px;
  margin-right: 3px;
  overflow-y:auto;
  height: 500px;
  overflow-x:hidden;
}

h1 {
  padding-top: 15px;
  font-size: 1.3rem;
  color: #4B4B4B;
}

.separator {
  margin-top: 10px;
  text-align: left;
  width: 450px;
  border: 0.5px solid #c3c3c394;
}

p {
  text-align: justify;
  font-size: 0.95rem;
  line-height: 150%;
  color: #4B4B4B;
}


h6 {
  position: absolute;
  left: 30px;
  bottom: -55px;
  font-size: 2rem;
  color: #C3C3C3;
  text-shadow: rgba(212, 212, 212, 0.5) 0px 3px 3px;
}

/* Those futur buttons */
ul {
  margin-left: 250px;
}

li {
  display: inline;
  list-style: none;
  padding-right: 40px;
  color: #7B7B7B;
}

/* Floating action button */
.fab {
  position: fixed;
  right: 8%;
  bottom:110px;
  box-sizing: border-box;
  padding-top: 18px;
  background-color: rgb(253, 94, 46);
  width: 80px;
  height: 80px;
  color: white;
  text-align: center;
  font-size: 1.2rem;
  border-radius: 50%;
  /* -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75); */
  box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.75);
  z-index:10200;
}

.fab #test {
    z-index:999999;
}

.card #totalsSection{
  position:relative;
  width:auto;
  top: 20px;
  margin-bottom: 30px;
  display:inline-block;
  color:#4B4B4B;
  left:6px;
}

#allOrders .itemName {
    position:relative;
    display:inline-block;
    width:200px; /* This sets the offset of where the count will be */
    overflow:hidden;
    overflow-y:no-content;
    text-overflow:ellipsis;
    white-space:nowrap;
}

#allOrders .price {
    position:relative;
    display:inline-block;
    margin-left:45px;
    margin-right:0;
    text-align:right;
}

#totalsSection #subTextPrice {
    /* The subTotal text was off a bit*/
    left:4px;
}

#allOrders .count {
    position:relative;
    display:inline-block;
    right:1220px;
    width:40px; /* Also sets the offset of where the price will be*/
}

#totalsSection .text {
    display:inline-block;
    width:285px; /* Defines the position of the price element ('shoves it over')*/
    white-space:nowrap;
    overflow:hidden;
    text-overflow:clip;
}

#allOrders .addToCart, #allOrders .removeFromCart {
    position:relative;
    left:15px;
}

#totalsSection .price {
    position:relative;
    display:inline-block;
}

#allOrders .specialInstructions {
    margin-left:15px;
    right:5%;
    display:inline-block;
    color:darkgray;
    width:254px;
    white-space:nowrap;
    text-overflow:ellipsis;
    overflow:hidden;
    overflow-y:no-content;
}

#totalsSection #totalAfterCoupon {
    display:inline-block;
    margin-left:15px;
    color:green;
}

.cartDividor {
  text-align: left;
  width: 400px;
  margin-top: 10px;
  margin-bottom: 10px;
}

a {
  color: white;
}

.card #CouponTitle {
  position:relative;
  top: -40px;
  /* margin-top:-20px; */
  margin-bottom: 20px;
  font-size: 16.5px;
  visibility:hidden;
  color:#3a3a3a;
  /* top:-55px !important; */
}

.card #CouponTitle #Coupon {
  color:rgb(47, 141, 47);
}
.card #tipSection {
  position: relative;
  top: -40px;
  visibility: hidden;
  text-align:left;
  /* padding:10px; */
  background-color: rgba(29, 29, 29, 0.589); /* Black w/ opacity */
  border: none;
  color: white;
  padding:10px;    
  font-weight: normal;
  border-radius:3px;
  width: 400px;
}

.card #tipSection #tipTitle {
  text-align:center;
  width: 200px;
  /* margin: auto; */
  background-color:rgba(114, 194, 68, 0.753);
  border-radius:5px;
  font-size:18px;
  padding: 3px;
  position: relative;
  /* top: 50px; */
}

.card #tipSection:after {
  content: '';
  position: absolute;
  margin-left: -10px;
	margin-top: -10px;
	top: 0;
	left: 20%;
	width: 0;
	height: 0;
	border: 10px solid transparent;
	border-bottom-color:rgba(29, 29, 29, 0.589);
	border-top: 0;
}

